# AIs_code_testing

chatGPT/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  chatGPT_output.txt
claude-sonnet-3.5/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  claude-sonnet-3.5_output.txt  main.cpp
